--- a/views/user.ejs
+++ b/views/user.ejs
@@ -25,12 +25,12 @@
         <div class="row">
           <% include include/menu.inc.ejs%>
           <div class="span9">
-            <div class="module">
-              <h3>用户统计表</h3>
-            </div><!--module-->
+            <div class='module'>
+            <div class="module-head">
+				<h3>用户列表</h3>
+			</div>
             <%include include/note.inc.ejs%>
             <div class="module-body table">
-              <div class="module-body table">
                 <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper" role="grid">
 
                   <div class="dataTables_filter" id="DataTables_Table_0_filter"></div><table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped  display dataTable" width="100%" id="DataTables_Table_0" aria-describedby="DataTables_Table_0_info" style="width: 100%;">
@@ -45,9 +45,6 @@
                    </tr>
                   </thead>
 
-                  <tfoot>
-                    <tr><th rowspan="1" colspan="1">Rendering engine</th><th rowspan="1" colspan="1">Browser</th><th rowspan="1" colspan="1">Platform(s)</th><th rowspan="1" colspan="1">Engine version</th><th rowspan="1" colspan="1">CSS grade</th></tr>
-                  </tfoot>
                 <tbody role="alert" aria-live="polite" aria-relevant="all">
                     <%　for(var i=0;i<data.length;i++){　%>
 
@@ -59,7 +56,7 @@
                       <!--判断各行变色-->
                       <td class="  sorting_1"><%=i+1%></td>
                       <td class=" "><%=data[i].name%></td>
-                      <td class=" "><%=data[i].project%></td>
+                      <td class=" "><%=data[i].porject%></td>
                       <td class="center "><%=data[i].department%></td>
                       <td class="center "><%=data[i].job_number%></td>
                       <td class="center ">
