update the framwork of admin basic functions
用routes文件夹里的routers将访问路径分开，使得结构明确
另外更新了user.js中读取项目部和部门目录的功能，使用嵌套的db.query语句，否则无法从回调函数中传值出来

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -60,7 +60,7 @@
                       <td class="center "><%=data[i].department%></td>
                       <td class="center "><%=data[i].job_number%></td>
                       <td class="center ">
-                        <a href="update-user?id=<%= data[i].id%>" class="small span2">
+                        <a href="user?act=update&id=<%= data[i].id%>" class="small span2">
                           <i class="icon-edit"></i>
 
 									     	</a></td>
