--- a/views/update-user.ejs
+++ b/views/update-user.ejs
@@ -30,7 +30,7 @@
                        </div>
 
                     <br>
-              		<form class="form-horizontal row-fluid" action='?' method='post'>
+              		<form class="form-horizontal row-fluid" action='user?act=update' method='post'>
 										<div class="control-group">
 											<label class="control-label" for="basicinput">员工工号</label>
 											<div class="controls">
@@ -42,8 +42,8 @@
 											<div class="controls">
 												<select tabindex="1" data-placeholder="<%= data.porject %>" class="span8" name="porject" value="<%= data.porject%>">
 													<option  value="<%= data.porject %>"><%= data.porject %></option>
-													  <%for (var i=0;i<listProject.length;i++){%>
-													<option value="<%=listProject[i]%>"><%=listProject[i]%></option>
+													  <%for (var i=0;i<listPorject.length;i++){%>
+													<option value="<%=listPorject[i]%>"><%=listPorject[i]%></option>
 											          <%}%>
 												</select>
 											</div>
@@ -53,7 +53,7 @@
                                           <div class="controls">
                                             <select tabindex="1" data-placeholder="<%= data.department %>" class="span8" name="department" value="">
                                               <option name="select_department" value="<%= data.department %>"><%= data.department %></option>
-                                              <%for (var i=0;i<listProject.length;i++){%>
+                                              <%for (var i=0;i<listPorject.length;i++){%>
                                               <option name="select_department" value="<%=listDepartment[i]%>"><%=listDepartment[i]%></option>
                                               <%}%>
                                             </select>
@@ -83,7 +83,7 @@
 											</div>
 										</div>
                                     	<input type="text"  value="<%=data.id%>" class="span8"  name="user_id" style="visibility:hidden">
- 
+
 
 										<div class="control-group">
 											<div class="controls">
