--- a/views/menu-add.ejs
+++ b/views/menu-add.ejs
@@ -12,20 +12,24 @@
 						<div class="control-group">
 							<label class="control-label" for="basicinput">菜品名称</label>
 							<div class="controls">
-								<input id="dish_title" type="text"  class="span8"  name="dish_title"  >
+								<input id="dish_title" type="text"  class="span8"  name="dishtitle"  >
 							</div>
 						</div>
-					    <script>
-					    document.getElementById('ingre_btn').herf="kitchen?act=menu_add_ingredient&dish_title="+document.getElementById('dish_title').value;
-					    </script><!--添加新菜品名到浮出窗口-->
+
 						<div class="control-group">
 								<label class="control-label">主要配料</label>
 								<div class="controls">
 									<div id="DataTables_Table_0_length" class="dataTables_length">
-										 <a id="ingre_btn" href="kitchen?act=menu_add_ingredient" class="btn" ><i class="icon-plus shaded"></i>添加配料 </a>
+										 <a id="ingre_btn" href="kitchen?act=menu_add_ingredient&dish_title=宫保鸡丁" class="btn" ><i class="icon-plus shaded"></i>添加配料 </a>
 									</div>
 								</div>
 						 </div>
+						 <script>
+					   var hrefstr="kitchen?act=menu_add_ingredient&dish_title=宫保鸡丁"+document.getElementById('dish_title').value+"";
+                       console.log(hrefstr);
+
+					   document.getElementById('ingre_btn').href=hrefstr;
+					   </script><!--添加新菜品名到浮出窗口-->
 
 						<div class="control-group">
 							<label class="control-label" for="basicinput">价格</label><!--需要添加如何使用js控制输入的信息-->
@@ -33,7 +37,8 @@
 								<input type="text"  class="span8"  name="price" >
 								<span class="help-inline">保留小数点后两位</span>
 							</div>
-						</div><div class="control-group">
+						</div>
+						<div class="control-group">
 							<div class="controls">
 								<button type="submit" class="btn">提交</button>
 							</div>
@@ -46,25 +51,24 @@
 		<div class="module upfloat"><!--添加窗口的模块 悬浮的-->
 			<div class="module-body">
 				<form class="form-horizontal row-fluid" action='kitchen?act=menu_add' method='post'>
-				<div class="profile-head media"><!--添加配料的模块头部 可以放菜品名 推荐价格 营养统计表-->
-					<a href="#" class="media-avatar pull-left">
-						<img src="images/user.png">
-					</a>
-					<div class="media-body">
-						<h4>
-							<%=dish_title%> <small>类别：暂时没有</small>
-						</h4>
-						<p class="profile-brief">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-							Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-							unknown printer took a galley of type.
-						</p>
-						<div class="profile-details muted">
-							<a href="#" class="btn"><i class="icon-plus shaded"></i>Send Friend Request </a>
-							<a href="#" class="btn"><i class="icon-envelope-alt shaded"></i>Send message </a>
+					<div class="profile-head media">
+						<a href="#" class="media-avatar pull-left">
+							<img src="images/user.png">
+						</a>
+						<div class="media-body">
+							<h4>
+								<%=dish_title%> <small>分类：未指定</small>
+							</h4>
+							<div class="control-group">
+								<textarea class="span8" rows="5" style="width: 100%;"></textarea>
+							</div>
+							<div class="profile-details muted">
+								<a href="#" class="btn" style="float: right;">
+									<i class="icon-ok shaded"></i>提价配料信息
+								</a>
+							</div>
 						</div>
-					</div>
-				</div>
+	               </div>
 				<ul class="profile-tab nav nav-tabs"><!--可翻开的菜单页 显示内容是配料的分类 实际内容是配料详细表-->
                     <li class=""><a href="#<%=class_arr[0]['class']%>" data-toggle="tab"><%=class_arr[0]['class']%></a></li>
 					<% for(var i=1;i<class_arr.length;i++){ %>
@@ -75,8 +79,8 @@
 					<%for(var i=0;i<class_arr.length;i++){%>
 					<div class="tab-pane fade " id="<%=class_arr[i]['class']%>"><!--菜单页对应的显示页面-->
 						<div class="control-group">
-							 <label class="control-label">Inline Checkboxes</label>
-							 <div class="controls">
+
+							 <div class="" >
 							 <%for(var j=0;j<ingredient_list.length;j++){%>
 		 						<%if(ingredient_list[j].class==class_arr[i]['class']){%>
 									<label class="checkbox inline">
@@ -90,11 +94,9 @@
 					</div>
 					<%}%>
 				</div>
-				<div class="control-group">
-					<div class="controls">
-						<button type="submit" class="btn">提交</button>
-					</div>
-				</div>
+                <script>
+                	TODU
+                </script>
 				</form>
 			</div><!--/.module-body-->
         </div>
