update on kitchens on 4.18  stay up late

--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -1712,7 +1712,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', end
 }
 .upfloat{
 	width:60%;
-	height:600px;
+	height:80%;
 	position:fixed;
 	left:20%;
 	top:10%;
