--- a/views/menu-add.ejs
+++ b/views/menu-add.ejs
@@ -1,6 +1,7 @@
 <% include include/upinall.inc.ejs%>
 
 <div class="content">
+	  <!--是菜单列表信息-->
 		<div class="module">
             <div class="module-head">
 								<h3>添加菜品</h3>
@@ -20,7 +21,10 @@
 								<label class="control-label">主要配料</label>
 								<div class="controls">
 									<div id="DataTables_Table_0_length" class="dataTables_length">
-										 <a id="ingre_btn" href="kitchen?act=menu_add_ingredient&dish_title=宫保鸡丁" class="btn" ><i class="icon-plus shaded"></i>添加配料 </a>
+										<a id="ingre_btn" href="kitchen?act=menu_add_ingredient&amp;dish_title=宫保鸡丁" class="btn" style="margin-bottom: 15px;">
+											<i class="icon-plus shaded"></i>
+											添加配料
+										</a>
 									</div>
 								</div>
 						 </div>
@@ -47,6 +51,7 @@
 			</div>
 		</div>
 		<%if (typeof class_arr!="undefined"){%>
+		<!--菜单内容信息-->
 		<div class="shadow"></div><!--添加窗口背景 黑色0.3透明度-->
 		<div class="module upfloat"><!--添加窗口的模块 悬浮的-->
 			<div class="module-body">
@@ -63,7 +68,7 @@
 								<textarea id="ingre_textarea" class="span8" rows="5" style="width: 100%;" >所选项目有：</textarea>
 							</div>
 							<div class="profile-details muted">
-								<a href="#" class="btn" style="float: right;">
+								<a href="#" class="btn" style="float: right;margin-top:15px">
 									<i class="icon-ok shaded"></i>提价配料信息
 								</a>
 							</div>
@@ -71,13 +76,21 @@
 						<script src="scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
 						<script>
 						$(document).ready(function(){
+							var checklist=[];//定义一个全局的配料清单变量
 							$("input[type=checkbox]").click(function(){
 							  var checkbox_value = $(this).attr('value');
 							  var checkbox_id = $(this).attr('id');
-							  console.log(checkbox_id,checkbox_value);
+                //判断该内容是否被选中
 							  if ($("#" + checkbox_id).is(":checked")) {
-								   $("#ingre_textarea").append("\r\n'"+checkbox_value+"':33%");
-							  }
+									var item={
+										text:checkbox_value,
+										key:checkbox_id
+									}
+									checklist.push(item);
+								   $("#ingre_textarea").text(JSON.stringify(checklist));
+							  }else{
+									//删除数组的的方法 预计4月20日完成
+								}
 							});
 						});
 						</script>
@@ -105,12 +118,28 @@
 							</div>
 						</div>
 					</div>
+
 					<%}%>
+
+					<a href="kitchen?act=menu_add" class="btn" style="float: right;margin-top: 15px;">
+									<i class="icon-remove shaded"></i>取消配料添加
+					</a>
 				</div>
 
 				</form>
 			</div><!--/.module-body-->
         </div>
 		<%}%>
+		<div class="module">
+											<div class="module-head">
+													<h3>
+															Pie - Default</h3>
+											</div>
+											<div class="module-body">
+													<div class="chart pie donut">
+															<div id="pie-default" class="graph" style="padding: 0px; position: relative;"><canvas class="base" width="668" height="300"></canvas><canvas class="overlay" width="668" height="300" style="position: absolute; left: 0px; top: 0px;"></canvas><div class="legend"><div style="position: absolute; width: 61px; height: 78px; top: 5px; right: 5px; background-color: rgb(255, 255, 255); opacity: 0.85;"> </div><table style="position:absolute;top:5px;right:5px;;font-size:smaller;color:#545454"><tbody><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(237,194,64);overflow:hidden"></div></div></td><td class="legendLabel">Series1</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(175,216,248);overflow:hidden"></div></div></td><td class="legendLabel">Series2</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(203,75,75);overflow:hidden"></div></div></td><td class="legendLabel">Series3</td></tr></tbody></table></div></div>
+													</div>
+											</div>
+		</div>
 </div>
 <% include include/downinall.inc.ejs%>
