--- a/views/menu_list.ejs
+++ b/views/menu_list.ejs
@@ -9,7 +9,7 @@
 
                   <div class="dataTables_filter" id="DataTables_Table_0_filter"></div>
                   <div id="DataTables_Table_0_length" class="dataTables_length">
-                      <a href="kitchen?act=menu_add" class="btn"><i class="icon-plus shaded"></i>添加菜品 </a>
+                      <a href="kitchen?act=menu_add" class="btn" style="margin-right: 15px;"><i class="icon-plus shaded"></i>添加菜品 </a>
                   </div>
 
                   <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped  display dataTable" width="100%" id="DataTables_Table_0" aria-describedby="DataTables_Table_0_info" style="width: 100%;">
