--- a/views/menu_list.ejs
+++ b/views/menu_list.ejs
@@ -39,7 +39,7 @@
                       <td class="center "><%=data[i].price%></td>
                       <td class="center "><%=data[i].creat_time %></td>
                       <td class="center ">
-                        <a href="user?act=update&id=<%= data[i].id%>" class="small span2">
+                        <a href="kitchen?act=update&id=<%= data[i].id%>" class="small span2">
                           <i class="icon-edit"></i>
 
 									     	</a></td>
