--- a/views/menu-add.ejs
+++ b/views/menu-add.ejs
@@ -1,145 +1,111 @@
-<% include include/upinall.inc.ejs%>
-
+﻿<%include include/upinall.inc.ejs%>
 <div class="content">
-	  <!--是菜单列表信息-->
-		<div class="module">
+    <!--是菜单列表信息-->
+    <div class="module">
             <div class="module-head">
-								<h3>添加菜品</h3>
-			</div>
+                <h3>添加菜品</h3>
+      </div>
             <div class="module-body">
                   <%include include/note.inc.ejs%>
 
-              		<form class="form-horizontal row-fluid" action='kitchen?act=menu_add' method='post'>
-						<div class="control-group">
-							<label class="control-label" for="basicinput">菜品名称</label>
-							<div class="controls">
-								<input id="dish_title" type="text"  class="span8"  name="dishtitle"  >
-							</div>
-						</div>
+                  <form class="form-horizontal row-fluid" action='kitchen?act=menu_add' method='post'>
+            <div class="control-group">
+              <label class="control-label" for="basicinput">菜品名称</label>
+              <div class="controls">
+                <input id="dish_title" type="text"  class="span8"  name="dishtitle"  >
+              </div>
+            </div>
 
-						<div class="control-group">
-								<label class="control-label">主要配料</label>
-								<div class="controls">
-									<div id="DataTables_Table_0_length" class="dataTables_length">
-										<a id="ingre_btn" href="kitchen?act=menu_add_ingredient&amp;dish_title=宫保鸡丁" class="btn" style="margin-bottom: 15px;">
-											<i class="icon-plus shaded"></i>
-											添加配料
-										</a>
-									</div>
-								</div>
-						 </div>
-						 <script>
-					   var hrefstr="kitchen?act=menu_add_ingredient&dish_title=宫保鸡丁"+document.getElementById('dish_title').value+"";
+            <div class="control-group">
+                <label class="control-label">主要配料</label>
+                <div class="controls">
+                  <div id="DataTables_Table_0_length" class="dataTables_length">
+                    <a id="ingre_btn" href="kitchen?act=menu_add_ingredient&amp;dish_title=宫保鸡丁" class="btn" style="margin-bottom: 15px;">
+                      <i class="icon-plus shaded"></i>
+                      添加配料
+                    </a>
+                  </div>
+                </div>
+             </div>
+             <script>
+             var hrefstr="kitchen?act=menu_add_ingredient&dish_title=宫保鸡丁"+document.getElementById('dish_title').value+"";
                        console.log(hrefstr);
 
-					   document.getElementById('ingre_btn').href=hrefstr;
-					   </script><!--添加新菜品名到浮出窗口-->
+             document.getElementById('ingre_btn').href=hrefstr;
+             </script><!--添加新菜品名到浮出窗口-->
 
-						<div class="control-group">
-							<label class="control-label" for="basicinput">价格</label><!--需要添加如何使用js控制输入的信息-->
-							<div class="controls">
-								<input type="text"  class="span8"  name="price" >
-								<span class="help-inline">保留小数点后两位</span>
-							</div>
-						</div>
-						<div class="control-group">
-							<div class="controls">
-								<button type="submit" class="btn">提交</button>
-							</div>
-						</div>
-				    </form>
-			</div>
-		</div>
-		<%if (typeof class_arr!="undefined"){%>
-		<!--菜单内容信息-->
-		<div class="shadow"></div><!--添加窗口背景 黑色0.3透明度-->
-		<div class="module upfloat"><!--添加窗口的模块 悬浮的-->
-			<div class="module-body">
-				<form class="form-horizontal row-fluid" action='kitchen?act=menu_add' method='post'>
-					<div class="profile-head media">
-						<a href="#" class="media-avatar pull-left">
-							<img src="images/user.png">
-						</a>
-						<div class="media-body">
-							<h4>
-								<%=dish_title%> <small>分类：未指定</small>
-							</h4>
-							<div class="control-group">
-								<textarea id="ingre_textarea" class="span8" rows="5" style="width: 100%;" >所选项目有：</textarea>
-							</div>
-							<div class="profile-details muted">
-								<a href="#" class="btn" style="float: right;margin-top:15px">
-									<i class="icon-ok shaded"></i>提价配料信息
-								</a>
-							</div>
-						</div>
-						<script src="scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
-						<script>
-						$(document).ready(function(){
-							var checklist=[];//定义一个全局的配料清单变量
-							$("input[type=checkbox]").click(function(){
-							  var checkbox_value = $(this).attr('value');
-							  var checkbox_id = $(this).attr('id');
-                //判断该内容是否被选中
-							  if ($("#" + checkbox_id).is(":checked")) {
-									var item={
-										text:checkbox_value,
-										key:checkbox_id
-									}
-									checklist.push(item);
-								   $("#ingre_textarea").text(JSON.stringify(checklist));
-							  }else{
-									//删除数组的的方法 预计4月20日完成
-								}
-							});
-						});
-						</script>
-	               </div>
-				<ul class="profile-tab nav nav-tabs"><!--可翻开的菜单页 显示内容是配料的分类 实际内容是配料详细表-->
-                    <li class=""><a href="#<%=class_arr[0]['class']%>" data-toggle="tab"><%=class_arr[0]['class']%></a></li>
-					<% for(var i=1;i<class_arr.length;i++){ %>
-					<li><a href="#<%=class_arr[i]['class']%>" data-toggle="tab"><%=class_arr[i]['class']%></a></li>
-					<%}%>
-				</ul>
-				<div class="profile-tab-content tab-content">
-					<%for(var i=0;i<class_arr.length;i++){%>
-					<div class="tab-pane fade " id="<%=class_arr[i]['class']%>"><!--菜单页对应的显示页面-->
-						<div class="control-group">
+            <div class="control-group">
+              <label class="control-label" for="basicinput">价格</label><!--需要添加如何使用js控制输入的信息-->
+              <div class="controls">
+                <input type="text"  class="span8"  name="price" >
+                <span class="help-inline">保留小数点后两位</span>
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="basicinput">已选配料</label><!--需要添加如何使用js控制输入的信息-->
+              <div class="controls">
+                <textarea id='ingre_textarea' class="span8" rows="5" name="ingredient">已选项目</textarea>
+              </div>
+            </div>
+            <div class="contorl-group">
+              <div class="controls">
+                <script src="scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
+                <script>
+                $(document).ready(function(){
+                  var checklist=[];//定义一个全局的配料清单变量
+                  $("input[type=checkbox]").click(function(){
+                    var checkbox_value = $(this).attr('value');
+                    var checkbox_id = $(this).attr('id');
+                    //判断该内容是否被选中
+                    if ($("#" + checkbox_id).is(":checked")) {
+                      var item={
+                        text:checkbox_value,
+                        key:checkbox_id
+                      }
+                      checklist.push(item);
+                       $("#ingre_textarea").text(JSON.stringify(checklist));
+                    }else{
+                      //删除数组的的方法 预计4月20日完成
+                    }
+                  });
+                });
+                </script>
+                     </div>
+            <ul class="profile-tab nav nav-tabs"><!--可翻开的菜单页 显示内容是配料的分类 实际内容是配料详细表-->
+                        <li class=""><a href="#<%=class_arr[0]['class']%>" data-toggle="tab"><%=class_arr[0]['class']%></a></li>
+              <% for(var i=1;i<class_arr.length;i++){ %>
+              <li><a href="#<%=class_arr[i]['class']%>" data-toggle="tab"><%=class_arr[i]['class']%></a></li>
+              <%}%>
+            </ul>
+            <div class="profile-tab-content tab-content">
+              <%for(var i=0;i<class_arr.length;i++){%>
+              <div class="tab-pane fade " id="<%=class_arr[i]['class']%>"><!--菜单页对应的显示页面-->
+                <div class="control-group">
 
-							 <div class="" >
-							 <%for(var j=0;j<ingredient_list.length;j++){%>
-		 						<%if(ingredient_list[j].class==class_arr[i]['class']){%>
-									<label class="checkbox inline">
-										<input type="checkbox" value="<%=ingredient_list[j].text%>" id="<%=ingredient_list[j].id%>">
-      									<%=ingredient_list[j].text%>
-   								    </label>
-								<%}%>
-							<%}%>
-							</div>
-						</div>
-					</div>
+                   <div class="" >
+                   <%for(var j=0;j<ingredient_list.length;j++){%>
+                    <%if(ingredient_list[j].class==class_arr[i]['class']){%>
+                      <label class="checkbox inline">
+                        <input type="checkbox" value="<%=ingredient_list[j].text%>" id="<%=ingredient_list[j].id%>">
+                            <%=ingredient_list[j].text%>
+                          </label>
+                    <%}%>
+                  <%}%>
+                  </div>
+                </div>
+              </div>
 
-					<%}%>
-
-					<a href="kitchen?act=menu_add" class="btn" style="float: right;margin-top: 15px;">
-									<i class="icon-remove shaded"></i>取消配料添加
-					</a>
-				</div>
-
-				</form>
-			</div><!--/.module-body-->
-        </div>
-		<%}%>
-		<div class="module">
-											<div class="module-head">
-													<h3>
-															Pie - Default</h3>
-											</div>
-											<div class="module-body">
-													<div class="chart pie donut">
-															<div id="pie-default" class="graph" style="padding: 0px; position: relative;"><canvas class="base" width="668" height="300"></canvas><canvas class="overlay" width="668" height="300" style="position: absolute; left: 0px; top: 0px;"></canvas><div class="legend"><div style="position: absolute; width: 61px; height: 78px; top: 5px; right: 5px; background-color: rgb(255, 255, 255); opacity: 0.85;"> </div><table style="position:absolute;top:5px;right:5px;;font-size:smaller;color:#545454"><tbody><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(237,194,64);overflow:hidden"></div></div></td><td class="legendLabel">Series1</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(175,216,248);overflow:hidden"></div></div></td><td class="legendLabel">Series2</td></tr><tr><td class="legendColorBox"><div style="border:1px solid #ccc;padding:1px"><div style="width:4px;height:0;border:5px solid rgb(203,75,75);overflow:hidden"></div></div></td><td class="legendLabel">Series3</td></tr></tbody></table></div></div>
-													</div>
-											</div>
-		</div>
+              <%}%>
+              </div>
+            </div>
+            <br>
+            <div class="control-group">
+              <div class="controls">
+                <button type="submit" class="btn">提交</button>
+              </div>
+            </div>
+            </form>
+      </div>
+    </div>
 </div>
-<% include include/downinall.inc.ejs%>
+<%include include/downinall.inc.ejs%>
